2009-11-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Darin Adler.

        PLATFORM(CF) should be set when building for Qt on Darwin
        https://bugs.webkit.org/show_bug.cgi?id=23671

        * WebCore.pro: Add SharedBufferCF.cpp and SmartReplaceCF.cpp
        to the Darwin build.
        * loader/archive/ArchiveFactory.cpp: Change the support for 
        legacy WebArchive from all CF platforms to Mac and Chromium 
        CF platforms.
        (WebCore::archiveMIMETypes):
        * platform/text/AtomicString.h: Remove PLATFORM(QT) &&
        PLATFORM(DARWIN) test as it is redundant now.
        * platform/text/PlatformString.h: Ditto.
        * platform/text/StringImpl.h: Ditto.
        * platform/text/cf/StringCF.cpp: Ditto.
        * platform/text/cf/StringImplCF.cpp: Ditto.

2009-11-02  Adam Barth  <abarth@webkit.org>

        Reviewed by David Levin.

        [Chromium] Actually declare getPluginMimeTypeFromExtension in a header.
        https://bugs.webkit.org/show_bug.cgi?id=30985

        Our current code does not conform to our style guide.

        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * platform/chromium/MIMETypeRegistryChromium.cpp:
        * plugins/chromium/PluginDataChromium.cpp:
        * plugins/chromium/PluginDataChromium.h: Added.

2009-11-02  Adele Peterson  <adele@apple.com>

        Reviewed by Darin Adler.

        Fix for <rdar://problem/7038305> REGRESSION (Safari 4.0.2 - ToT): After navigating back to a known phishy page, the "Ignore warning" button appears highlighted (along with the "Go Back" button)

        This bug is timing dependent, and not always reproducible.  I could not think of a way to add a 
        layout test that would demonstrate the problem and fix.

        * platform/mac/ThemeMac.mm:
        (WebCore::checkbox): Update style.
        (WebCore::paintCheckbox): ditto.
        (WebCore::radio): ditto.
        (WebCore::paintRadio): ditto.